# my-settings-ui

./: .gitignore  Cargo.toml  Dioxus.toml  Dockerfile  README.md  build.rs
.github/workflows/: release.yml
files/: app.css
src/: http_server.rs  main.rs  router.rs  settings.rs  static_resources.rs  ui_utils.rs  utils.rs
src/api/: mod.rs  secrets.rs  templates.rs
src/api_client/: delete_secret.rs  get_all_secrets.rs  get_all_templates.rs  get_secret_value.rs  get_secrets_usage.rs  get_template_value.rs  get_templates_usage.rs  load_secret.rs  mod.rs  save_secret.rs  save_template.rs
src/app_ctx/: app_ctx.rs
src/dialogs/: copy_to_env.rs  delete_secret.rs  dialog_state.rs  dialog_template.rs  dialog_value.rs  edit_secret.rs  mod.rs  render.rs  show_populated_yaml.rs  show_secret.rs  show_secret_usage_by_secret.rs  show_secret_usage_by_template.rs  show_template_to_export.rs  snapshot_to_import.rs
src/dialogs/edit_secret/: render.rs  state.rs
src/dialogs/edit_template/: choose_secret.rs  edit_template.rs  mod.rs  peek_secrets.rs  select_secret.rs  states.rs
src/grpc_client/: domains_grpc_client.rs  mod.rs  secrets_grpc_client.rs  templates_grpc_client.rs
src/icons/: icons.rs  render_enabled_disabled.rs
src/models/: download_templates.rs  mod.rs  secret_http_model.rs  secrets.rs  template_http_model.rs
src/nginx_http_client/: mod.rs
src/server/: mod.rs  settings.rs
src/server/app_ctx/: app_ctx.rs
src/server/grpc_client/: domains_grpc_client.rs  secrets_grpc_client.rs  templates_grpc_client.rs
src/states/: cloud_flare_records_state.rs  dialog_state.rs  filter_secret_state.rs  filter_template_state.rs  last_edited.rs  main_state.rs  mod.rs
src/storage/: last_used_product.rs  mod.rs
src/views/: domains_list.rs  envs_selector.rs  icons.rs  left_panel.rs  mod.rs  proxy_pass_icon.rs  right_panel.rs  secrets_list.rs  templates_list.rs
src/views/dialog/: delete_secret.rs  delete_template.rs  edit_secret.rs  edit_template.rs  mod.rs  render.rs  show_populated_yaml.rs  show_secret.rs  show_secret_usage_by_secret.rs  show_secret_usage_by_template.rs
src/views/dialog/edit_cf_a_record/: edit_cf_a_record.rs
src/views/dialog/edit_domain_mask/: edit_domain_mask.rs
src/views/dialog/edit_domain_product/: edit_domain_product.rs  state.rs
src/views/dialog/edit_template/: choose_secret.rs  edit_template.rs  mod.rs  peek_secrets.rs  select_secret.rs
src/views/secrets_page/: api.rs  mod.rs  render.rs  state.rs
src/views/templates_page/: api.rs  render.rs  state.rs
static/secrets/index/: 6798cefd.html
