[package]
name = "my-settings-ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
my-settings-reader = { tag = "0.1.5", git = "https://github.com/MyJetTools/my-settings-reader.git", features = [
    "background-reader",
] }
flurl = { tag = "0.4.0", git = "https://github.com/MyJetTools/fl-url.git" }

rust-extensions = { tag = "0.1.3", git = "https://github.com/MyJetTools/rust-extensions.git" }
my-logger = { tag = "0.2.1", git = "https://github.com/MyJetTools/my-logger.git" }


dioxus = "*"
dioxus-desktop = "*"
dioxus-liveview = { varsion = "*", features = ["salvo"] }
dioxus-ssr = "*"
dioxus-free-icons = { path = "./libs/icon-packages/lib", features = [
    "bootstrap",
    "ionicons",
] }

my-grpc-extensions = { tag = "0.4.0", git = "https://github.com/MyJetTools/my-grpc-extensions.git" }
my-grpc-client-macros = { tag = "0.1.0", git = "https://github.com/MyJetTools/my-grpc-client-macros.git" }
my-telemetry = { tag = "0.3.0", git = "https://github.com/MyJetTools/my-telemetry.git" }


settings-utils = { tag = "0.1.0", git = "https://github.com/MyJetTools/settings-utils.git" }

tokio = { version = "*", features = ["full"] }
serde = { version = "*", features = ["derive"] }
serde_json = "*"
serde_yaml = "*"
futures = "*"
tonic = { version = "*", features = ["tls", "tls-roots", "prost"] }
anyhow = "*"
prost = "*"
prost-types = "*"
fermi = "*"
futures-util = "*"
salvo = { version = "*", features = ["full", "affix", "ws"] }
once_cell = "*"
async-trait = "*"
lazy_static = "*"


[build-dependencies]
ci-utils = { git = "https://github.com/MyJetTools/ci-utils.git", tag = "0.1.0" }
