[package]
name = "my-settings-ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
server = [
    "dioxus/axum",
    "my-logger",
    "my-grpc-extensions",
    "tokio",
    "tonic",
    "async-trait",
    "anyhow",
    "prost",
    "prost-types",
    "futures",
    "lazy_static",
    "serde_yaml",
    "flurl",
    "my-settings-reader",
]
web = ["dioxus/web"]

[dependencies]
rust-extensions = { tag = "0.1.5", git = "https://github.com/MyJetTools/rust-extensions.git" }
my-logger = { tag = "1.2.1", git = "https://github.com/MyJetTools/my-logger.git", optional = true }

my-grpc-extensions = { tag = "0.6.4", git = "https://github.com/MyJetTools/my-grpc-extensions.git", features = [
    "grpc-client",
], optional = true }


#dioxus-free-icons = { path = "./libs/icon-packages/lib", features = [
#    "bootstrap",
#    "ionicons",
#] }


my-settings-reader = { tag = "0.4.1", git = "https://github.com/MyJetTools/my-settings-reader.git", optional = true }


settings-utils = { tag = "0.1.1", git = "https://github.com/MyJetTools/settings-utils.git" }

dioxus = { version = "0.5", features = ["fullstack", "router"] }

dioxus-utils = { git = "https://github.com/MyJetTools/dioxus-utils.git", tag = "0.1.0", features = [
    "fullstack",
] }

serde = "*"
chrono = "*"


tokio = { version = "*", features = ["full"], optional = true }
serde_json = { version = "*" }
serde_yaml = { version = "*", optional = true }
futures = { version = "*", optional = true }
tonic = { version = "*", features = [
    "tls",
    "tls-roots",
    "prost",
], optional = true }
anyhow = { version = "*", optional = true }
prost = { version = "*", optional = true }
prost-types = { version = "*", optional = true }
async-trait = { version = "*", optional = true }
lazy_static = { version = "*", optional = true }
flurl = { tag = "0.6.1", git = "https://github.com/MyJetTools/fl-url.git", optional = true }
base64 = { version = "*" }

[build-dependencies]
ci-utils = { git = "https://github.com/MyJetTools/ci-utils.git", tag = "0.1.1" }
